# LightningEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  imgui.ini  premake5.lua
LightningCore/: MacEditor.mm  MacEditorDelegate.hpp  VertexData.h
LightningCore/Camera/: Camera.cpp  Camera.h
LightningCore/Editor/: EditorLayer.cpp  EditorLayer.h  MacEditor.h  MacEditor.mm  MacEditorApplication.cpp  MacEditorApplication.h  MacEditorApplication.mm  MacEditorDelegate.cpp  MacEditorDelegate.h  MacEditorDelegate.hpp
LightningCore/Entity/: Entity.cpp  Entity.h
LightningCore/Input/: AppleController.h  AppleController.mm
LightningCore/Layers/: Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h
LightningCore/Logging/: Log.cpp  Log.h
LightningCore/Math/: AAPLMathUtilities.h  LightningMath.h
LightningCore/Platform/: Window.h
LightningCore/Primitives/: MeshBuilder.cpp  MeshBuilder.h  SpriteAnimation.cpp  SpriteAnimation.h  VertexData.h
LightningCore/Renderer/: Renderer.cpp  Renderer.h
LightningCore/Scene/: Scene.cpp  Scene.h
LightningCore/Timer/: Timer.h
LightningEditor/: ContentBrowserPanel.h  Info.plist  Sprite.metal  imgui.ini
LightningEditor/Editor/: ContentBrowserPanel.cpp  ContentBrowserPanel.h  EditorLayer.cpp
LightningEditor/Mac/: MacEditorApplication.cpp  MacEditorApplication.h  MacEditorLayer.cpp  MacEditorLayer.h
LightningEditor/Source/: MacEditorApplication.cpp  MacEditorApplication.h  main.cpp
LightningEngine/: ._GLFWBridge.h  ._LightningEngine.xcodeproj  ._MacApplication.h  ._MetalApplication.cpp  ._MetalApplication.h  ._MetalCPPApplication.cpp  ._MetalCPPApplication.h  ._MyMTKViewDelegate.cpp  ._MyMTKViewDelegate.h  ._Renderer.cpp  ._Renderer.h  ._VertexData.h  ._main.cpp  ._mtl_implementation.cpp  GLFWBridge.h  GLFWBridge.mm  MacApplication.h  MetalApplication.cpp  MetalApplication.h  MetalApplication.mm  MetalCPPApplication.cpp  MetalCPPApplication.h  MetalRenderer.cpp  MetalRenderer.h  MyMTKViewDelegate.cpp  MyMTKViewDelegate.h  Renderer.cpp  Renderer.h  Texture.cpp  VertexData.hpp  ViewDelegate.cpp  ViewDelegate.h  app_delegate.cpp  app_delegate.h  imgui.ini  main.cpp  main.mm  mtl_implementation.cpp  view_delegate.cpp  view_delegate.h
LightningEngine.xcodeproj/: project.pbxproj
LightningEngine.xcworkspace/: contents.xcworkspacedata
LightningEngine/Source/: main.cpp
LightningGame/: Info.plist
metal-cpp/: ._Foundation  ._LICENSE.txt  ._Metal  ._MetalFX  ._QuartzCore  ._README.md  ._SingleHeader
(+217 files in other folders)
